--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
   <head>
     <title>Tab Decay</title>
     <link rel="stylesheet" type="text/css" href="chrome-bootstrap.css" />
+    <script src="shared.js"></script>
     <script src="popup.js"></script>
   </head>
   <body style="width: 300px; height: 200px; padding: 1em;">
