adding save current page option to browser action popup

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,13 @@
             </dt>
           </a>
         </li>
+        <li>
+          <a href="#" id="dt_archive_page_now_link">
+            <dt>
+              Archive this page now (FINISH ME!)
+            </dt>
+          </a>
+        </li>
       </ul>
       <p>
         <small><a href="https://tabdecay.cosmicshovel.com/" target="_blank">Tab Decay</a> &copy; Cosmic Shovel, Inc.</small>
