--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body style="width: 300px; height: 200px; padding: 1em;">
     <div class="content">
-      <h1>Tab Decay <span id="dt_version_head"></span></h1>
+      <h1>Tab Decay</h1>
       <ul class="highlightable">
         <li>
           <a href="#" id="dt_options_link">
