adding some error checking to decay_value option

--- a/options.html
+++ b/options.html
@@ -38,6 +38,7 @@
       </section>
       <p>
         <button id="dt_save_settings">Save</button>
+        <button id="dt_reset_settings">Reset</button>
         <span id="dt_save_status"></span>
       </p>
     </div>
