storing archived tab ids in localStorage.  added "view archives" link to popup.

--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,16 @@
           </a>
         </li>
         <li>
+          <a href="#" id="dt_view_archives" target="_blank">
+            <dt>
+              View Archived Pages
+            </dt>
+          </a>
+        </li>
+        <li>
           <a href="#" id="dt_archive_page_now_link">
             <dt>
-              Archive this page now (FINISH ME!)
+              Bookmark + Archive
             </dt>
           </a>
         </li>
