preparing to add archive encryption

--- a/options.html
+++ b/options.html
@@ -26,15 +26,22 @@
           <br />
           <small>Tab Decay will save your bookmarks in dated folders inside Other Bookmarks -> Tab Decay.</small>
         </div>
+      </section>
+      <h3>Archival (<a href="#" id="dt_archive_user_link" target="_blank">view your archive</a>)</h3>
+      <section>
+        <p>
+          Saves an HTML copy and a screenshot of the page to our server.  All requests use SSL, and all uploads are visible only to you (unless you share your archive URL).
+        </p>
         <div class="checkbox">
           <input type="checkbox" name="dt_archive_enabled" id="dt_archive_enabled"> <label for="dt_archive_enabled">Archive pages using Tab Decay web service</label>
-          <br />
-          <small>
-            Saves screenshots and a full HTML/CSS/JS/image archive.  Uses SSL for transport but is not encrypted on server; purely experimental at the moment.  Your uploads are only visible to you (unless you share the URL below).
-            <br />
-            <a href="#" id="dt_archive_user_link" target="_blank">View your uploads</a>
-          </small>
         </div>
+      </section>
+      <h3>Encryption</h3>
+      <section>
+        <p>
+          Enable encryption if you don't want any record on our server of the page's URL or contents when archiving pages.  All encryption and decryption occurs on your computer.
+        </p>
+        
       </section>
       <p>
         <button id="dt_save_settings">Save</button>
