decryption is working. as is archiving on-demand with encryption of page source

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,13 @@
           </a>
         </li>
         <li>
+          <a href="#" id="dt_view_encrypted_archives" target="_blank">
+            <dt>
+              View Encrypted Archived Pages
+            </dt>
+          </a>
+        </li>
+        <li>
           <a href="#" id="dt_archive_page_now_link">
             <dt>
               Bookmark + Archive
